<resources>
    <string name="app_name">Dark Player</string>

    <string name="fragment_1">Home</string>
    <string name="fragment_2">Profile</string>
    <string name="fragment_3">Play</string>
    <string name="fragment_4">nearby</string>
    <string name="fragment_5">Cup</string>

    <string name="last_match_result">Last Match Result :</string>
    <string name="searching_image">searching image</string>
    <string name="available_competitions">Available Competitions</string>
    <string name="searching_for_a_competitor">Searching for a competitor ...</string>
    <string name="userName">User Name</string>
    <string name="password">Password</string>
    <string name="image">image</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_password_try_to_reset_it">Forget password try to reset it</string>
</resources>
