<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment1">
    <fragment
        android:id="@+id/fragment1"
        android:name="com.example.play.Fragment1"
        android:label="@string/fragment_1"
        tools:layout="@layout/fragment_fragment1" />
    <fragment
        android:id="@+id/fragment2"
        android:name="com.example.play.Fragment2"
        android:label="@string/fragment_2"
        tools:layout="@layout/fragment_fragment2" />
    <fragment
        android:id="@+id/fragment3"
        android:name="com.example.play.Fragment3"
        android:label="@string/fragment_3"
        tools:layout="@layout/fragment_fragment3" />
    <fragment
        android:id="@+id/fragment4"
        android:name="com.example.play.Fragment4"
        tools:layout="@layout/fragment_fragment4"
        android:label="@string/fragment_4" />
    <fragment
        android:id="@+id/fragment5"
        android:name="com.example.play.Fragment5"
        tools:layout="@layout/fragment_fragment5"
        android:label="@string/fragment_5" />
    <activity
        android:id="@+id/signInActivity"
        android:name="com.example.play.SignInActivity"
        android:label="activity_sign_in"
        tools:layout="@layout/activity_sign_in" />
</navigation>